PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.0 Beta 2
- Upgraded bundled sqlite to version 3.6.11. (Scott)

- Re-enabled phar for big-endian systems after fixing problems. (Greg)

- Fixed bug #47549 (get_defined_constants() return array with broken
  array categories). (Ilia)
- Fixed Bug #47443 (metaphone('scratch') returns wrong result). (Felipe)
- Fixed bug #47438 (mysql_fetch_field ignores zero offset). (Johannes)
- Fixed bug #47398 (PDO_Firebird doesn't implements quoter correctly). (Felipe)
- Fixed bug #47390 (odbc_fetch_into - BC in php 5.3.0). (Felipe)
- Fixed bug #47343 (gc_collect_cycles causes a segfault when called within a
  destructor in one case). (Dmitry)
- Fixed bug #47329 (Crash in garbage collector). (Dmitry)
- Fixed bug #47320 ($php_errormsg out of scope in functions). (Dmitry)
- Fixed bug #47265 (generating phar.phar fails because of safe_mode). (Greg)
- Fixed bug #47229 (preg_quote() should escape the '-' char). (Nuno)
- Fixed bug #47085 (rename() returns true even if the file in PHAR does not
  exist). (Greg)
- Fixed bug #47031 (Fix constants in DualIterator example). (Etienne)
- Fixed bug #46897 (ob_flush() should fail to flush unerasable buffers).
  (David C.)
- Fixed bug #46542 (Extending PDO class with a __call() function doesn't work
  as expected). (Johannes)
- Fixed bug #46347 (parse_ini_file() doesn't support * in keys). (Nuno)
- Fixed bug #46048 (SimpleXML top-level @attributes not part of iterator).
  (David C.)
- Fixed bug #45432 (PDO: persistent connection leak). (Felipe)
- Fixed bug #43831 ($this gets mangled when extending PDO with persistent 
  connection). (Felipe)

29 Jan 2009, PHP 5.3.0 Beta 1
- Upgraded bundled sqlite to version 3.6.10. (Scott, Ilia)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Improved DNS API